--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -764,6 +764,7 @@
                 <gravitee-policy-data-logging-masking.version>2.0.1</gravitee-policy-data-logging-masking.version>
                 <gravitee-policy-interrupt.version>1.1.0</gravitee-policy-interrupt.version>
                 <gravitee-entrypoint-sse-advanced.version>2.0.0-alpha.5</gravitee-entrypoint-sse-advanced.version>
+                <gravitee-entrypoint-webhook-advanced.version>1.0.0-SNAPSHOT</gravitee-entrypoint-webhook-advanced.version>
                 <gravitee-endpoint-kafka-advanced.version>1.0.0-alpha.8</gravitee-endpoint-kafka-advanced.version>
                 <gravitee-endpoint-mqtt5-advanced.version>1.0.0-alpha.4</gravitee-endpoint-mqtt5-advanced.version>
 
@@ -787,6 +788,13 @@
                     <type>zip</type>
                     <scope>runtime</scope>
                 </dependency>
+<!--                <dependency>-->
+<!--                    <groupId>com.graviteesource.entrypoint</groupId>-->
+<!--                    <artifactId>gravitee-entrypoint-webhook-advanced</artifactId>-->
+<!--                    <version>${gravitee-entrypoint-webhook-advanced.version}</version>-->
+<!--                    <scope>runtime</scope>-->
+<!--                    <type>zip</type>-->
+<!--                </dependency>-->
                 <!-- Endpoints -->
                 <dependency>
                     <groupId>com.graviteesource.endpoint</groupId>
