--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
 
     <properties>
         <gravitee-bom.version>2.7</gravitee-bom.version>
-        <gravitee-common-elasticsearch.version>4.0.0-alpha.1</gravitee-common-elasticsearch.version>
-        <gravitee-gateway-api.version>2.0.0-alpha.1</gravitee-gateway-api.version>
-        <gravitee-node-api.version>2.0.0-alpha.3</gravitee-node-api.version>
+        <gravitee-common-elasticsearch.version>4.0.0</gravitee-common-elasticsearch.version>
+        <gravitee-gateway-api.version>2.0.0</gravitee-gateway-api.version>
+        <gravitee-node-api.version>2.0.0</gravitee-node-api.version>
         <gravitee-policy-api.version>1.10.0</gravitee-policy-api.version>
         <gravitee-reporter-api.version>1.22.0</gravitee-reporter-api.version>
         <commons-validator.version>1.7</commons-validator.version>
