--- a/pom.xml
+++ b/pom.xml
@@ -55,24 +55,24 @@
         <!-- Gravitee dependencies version -->
         <gravitee-bom.version>2.9</gravitee-bom.version>
         <gravitee-alert-api.version>1.9.1</gravitee-alert-api.version>
-        <gravitee-cockpit-api.version>2.0.0-alpha.1</gravitee-cockpit-api.version>
-        <gravitee-common.version>2.0.0-alpha.3</gravitee-common.version>
+        <gravitee-cockpit-api.version>2.0.0</gravitee-cockpit-api.version>
+        <gravitee-common.version>2.0.0</gravitee-common.version>
         <gravitee-connector-api.version>1.1.4</gravitee-connector-api.version>
-        <gravitee-expression-language.version>2.0.0-alpha.2</gravitee-expression-language.version>
+        <gravitee-expression-language.version>2.0.1</gravitee-expression-language.version>
         <gravitee-fetcher-api.version>1.4.0</gravitee-fetcher-api.version>
-        <gravitee-gateway-api.version>2.0.0-alpha.10</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>2.0.0</gravitee-gateway-api.version>
         <gravitee-license-node.version>1.3.1</gravitee-license-node.version>
-        <gravitee-node.version>2.0.0-alpha.3</gravitee-node.version>
+        <gravitee-node.version>2.0.1</gravitee-node.version>
         <gravitee-notifier-api.version>1.4.1</gravitee-notifier-api.version>
         <gravitee-plugin.version>1.25.0</gravitee-plugin.version>
         <gravitee-platform-repository-api.version>1.2.0</gravitee-platform-repository-api.version>
         <gravitee-policy-api.version>1.11.0</gravitee-policy-api.version>
-        <gravitee-reporter-api.version>1.24.0</gravitee-reporter-api.version>
+        <gravitee-reporter-api.version>1.24.1</gravitee-reporter-api.version>
         <gravitee-resource-auth-provider-api.version>1.3.0</gravitee-resource-auth-provider-api.version>
         <gravitee-resource-cache-provider-api.version>1.3.0</gravitee-resource-cache-provider-api.version>
         <gravitee-resource-oauth2-provider-api.version>1.3.0</gravitee-resource-oauth2-provider-api.version>
         <gravitee-service-discovery-api.version>1.1.1</gravitee-service-discovery-api.version>
-        <gravitee-kubernetes-mapper.version>2.0.0-alpha.1</gravitee-kubernetes-mapper.version>
+        <gravitee-kubernetes-mapper.version>2.0.0</gravitee-kubernetes-mapper.version>
         <!-- Other dependencies version -->
         <asm.version>9.2</asm.version>
         <batik-transcoder.version>1.15</batik-transcoder.version>
