--- a/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
+++ b/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
@@ -121,3 +121,5 @@ databaseChangeLog:
       - file: liquibase/changelogs/v3_15_3/schema.yml
   - include:
       - file: liquibase/changelogs/v3_15_14/schema.yml
+  - include:
+      - file: liquibase/changelogs/v3_15_20/schema.yml
