--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
         <jakarta.activation-api.version>1.2.2</jakarta.activation-api.version>
         <jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version>
         <jmh.version>1.33</jmh.version>
+        <jcstress.version>0.15</jcstress.version>
         <jsonassert.version>1.5.0</jsonassert.version>
         <json-patch.version>1.13</json-patch.version>
         <json-path.version>2.6.0</json-path.version>
