--- a/gravitee-apim-e2e/docker/common/docker-compose-mongo.yml
+++ b/gravitee-apim-e2e/docker/common/docker-compose-mongo.yml
@@ -21,7 +21,7 @@ volumes:
 
 services:
   database:
-    image: circleci/mongo:${MONGODB_VERSION:-5}
+    image: mongo:${MONGODB_VERSION:-5}
     container_name: gravitee-apim-e2e-mongodb
     restart: always
     ports:
