--- a/gravitee-apim-rest-api/gravitee-apim-rest-api-service/src/test/resources/io/gravitee/rest/api/management/service/export-convertAsCustomResource-contextRef.yml
+++ b/gravitee-apim-rest-api/gravitee-apim-rest-api-service/src/test/resources/io/gravitee/rest/api/management/service/export-convertAsCustomResource-contextRef.yml
@@ -62,6 +62,6 @@ spec:
       '*/*':
         status: 400
         body: "{\"bad\":\"news\"}"
-  contextRef:
-    name: "apim-dev-ctx"
+  contexts:
+  - name: "apim-dev-ctx"
     namespace: "default"
