test: major Cypress upgrade (v9.5.0 -> v12.2.0)

--- a/gravitee-apim-e2e/package.json
+++ b/gravitee-apim-e2e/package.json
@@ -9,10 +9,9 @@
         "build": "tsc --removeComments --outDir dist --target es5",
         "bulk": "jest -c jest.config.bulk.js -e --forceExit --logHeapUsage --useStderr --runInBand --detectOpenHandles",
         "test:ui": "sh ./scripts/run-docker-compose.sh ui-test mongo",
-        "test:ui:dev": "cypress open --config-file ui-test/integration/apim/ui/cypress-config.json",
-        "test:ui:bulk": "cypress run --config-file ui-test/integration/apim/bulk/cypress-config.json",
-        "test:ui:e2e": "cypress open --config-file ui-test/integration/apim/e2e/cypress-config.json",
-        "test:ui:platform": "cypress open --config-file ui-test/integration/platform/cypress-config.json",
+        "test:ui:dev": "cypress open --browser=chrome --e2e --config-file ui-test/integration/apim/ui/cypress-ui-config.ts",
+        "test:ui:e2e": "cypress open --browser=chrome --e2e --config-file ui-test/integration/apim/e2e/cypress-e2e-config.ts",
+        "test:ui:platform": "cypress open --browser=chrome --e2e --spec ui-test/integration/platform/*.ts",
         "test:api:mongo": "sh ./scripts/run-docker-compose.sh api-test mongo",
         "test:api:bridge": "sh ./scripts/run-docker-compose.sh api-test bridge",
         "test:api:jdbc": "sh ./scripts/run-docker-compose.sh api-test jdbc",
@@ -33,15 +32,13 @@
     },
     "license": "MIT License",
     "devDependencies": {
-        "@bahmutov/cypress-extends": "^1.1.0",
         "@jest/create-cache-key-function": "^28.0.0",
         "@types/jest": "27.4.1",
         "@types/jsonwebtoken": "8.5.8",
         "@types/node": "16.10.9",
         "@types/node-fetch": "2.6.1",
         "ansi-regex": "6.0.1",
-        "cypress": "9.5.0",
-        "cypress-terminal-report": "3.4.1",
+        "cypress": "12.2.0",
         "dotenv": "16.0.0",
         "har-validator": "5.1.5",
         "jest": "27.5.1",
