--- a/gravitee-apim-e2e/docker/ui-tests/docker-compose-ui-tests.yml
+++ b/gravitee-apim-e2e/docker/ui-tests/docker-compose-ui-tests.yml
@@ -18,12 +18,12 @@ version: '3.8'
 
 services:
   cypress:
-    image: cypress/included:9.6.0
+    image: cypress/included:12.2.0
     working_dir: /test
-    command: "--spec 'ui-test/integration/apim/ui/**/*.ts'"
+    command: "--e2e --browser=chrome --spec 'ui-test/integration/apim/ui/**/*.ts' --config-file '/test/cypress-ui-config.ts'"
     volumes:
       - ./:/test
-      - ./docker/ui-tests/conf/cypress.json:/test/cypress.json
+      - ./docker/ui-tests/conf/cypress-ui-config.ts:/test/cypress-ui-config.ts
     depends_on:
       nginx:
         condition: service_healthy
