ci: ignore "alpha" version in "Update maven dependencies versions from properties" step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1227,7 +1227,7 @@ jobs:
                   name: Update maven dependencies versions from properties
                   command: |
                       # Update maven dependencies versions from properties
-                      mvn -s .gravitee.settings.xml -B -U versions:update-properties -Dmaven.version.rules.serverId=artifactory-gravitee -Dincludes="io.gravitee.*:*" -Dexcludes="io.gravitee.policy:*,io.gravitee.connector:*,io.gravitee.resource:*,io.gravitee.service:*,io.gravitee.fetcher:*,io.gravitee.tracer:*,io.gravitee.repository:*,io.gravitee.reporter:*,io.gravitee.cockpit:*,io.gravitee.discovery:*,io.gravitee.notifier:*,com.graviteesource.notifier:*,com.graviteesource.policy:*" -DallowMajorUpdates=false -DallowMinorUpdates=false -DallowIncrementalUpdates=true -DgenerateBackupPoms=false -T 2C -no-transfer-progress
+                      mvn -s .gravitee.settings.xml -B -U org.codehaus.mojo:versions-maven-plugin:2.14.2:update-properties -Dmaven.version.rules.serverId=artifactory-gravitee -Dincludes="io.gravitee.*:*" -Dexcludes="io.gravitee.policy:*,io.gravitee.connector:*,io.gravitee.resource:*,io.gravitee.service:*,io.gravitee.fetcher:*,io.gravitee.tracer:*,io.gravitee.repository:*,io.gravitee.reporter:*,io.gravitee.cockpit:*,io.gravitee.discovery:*,io.gravitee.notifier:*,com.graviteesource.notifier:*,com.graviteesource.policy:*" -DallowMajorUpdates=false -DallowMinorUpdates=false -DallowIncrementalUpdates=true -DgenerateBackupPoms=false -DignoredVersions="*alpha*" -T 2C -no-transfer-progress
 
                       # Remove `-SNAPSHOT` from version                    
                       sed -i "s#<changelist>.*</changelist>#<changelist></changelist>#" pom.xml
