fix(repository): change PK of flow_steps table to a new auto incremented column
The previous PK wasn't applicable due to issues in the code leading to order always equal to 0.

https://gravitee.atlassian.net/browse/APIM-546
https://github.com/gravitee-io/issues/issues/8816

--- a/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
+++ b/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
@@ -123,3 +123,5 @@ databaseChangeLog:
       - file: liquibase/changelogs/v3_15_14/schema.yml
   - include:
       - file: liquibase/changelogs/v3_15_20/schema.yml
+  - include:
+      - file: liquibase/changelogs/v3_15_21/schema.yml
