--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,11 @@
         <gravitee-bom.version>3.0.0</gravitee-bom.version>
         <gravitee-alert-api.version>1.9.1</gravitee-alert-api.version>
         <gravitee-cockpit-api.version>2.0.0</gravitee-cockpit-api.version>
-        <gravitee-common.version>2.1.0-apim-373-subscription-error-management-SNAPSHOT</gravitee-common.version>
+        <gravitee-common.version>2.1.0-alpha.2</gravitee-common.version>
         <gravitee-connector-api.version>1.1.4</gravitee-connector-api.version>
         <gravitee-expression-language.version>2.0.1</gravitee-expression-language.version>
         <gravitee-fetcher-api.version>1.4.0</gravitee-fetcher-api.version>
-        <gravitee-gateway-api.version>2.1.0-apim-373-subscription-error-management-SNAPSHOT</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>2.1.0-alpha.5</gravitee-gateway-api.version>
         <gravitee-license-node.version>1.3.1</gravitee-license-node.version>
         <gravitee-node.version>2.0.1</gravitee-node.version>
         <gravitee-notifier-api.version>1.4.1</gravitee-notifier-api.version>
