--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -73,7 +73,7 @@
         <gravitee-policy-mock.version>1.13.0</gravitee-policy-mock.version>
 	    <gravitee-policy-oauth2.version>2.0.0</gravitee-policy-oauth2.version>
         <gravitee-policy-openid-connect-userinfo.version>1.5.2</gravitee-policy-openid-connect-userinfo.version>
-        <gravitee-policy-override-http-method.version>1.3.0</gravitee-policy-override-http-method.version>
+        <gravitee-policy-override-http-method.version>2.0.0-alpha.1</gravitee-policy-override-http-method.version>
         <!--    Version of policy-ratelimit is also used for policy-quota, policy-spikearrest and gateway-services-ratelimit    -->
         <!--    <gravitee-policy-quota.version>1.15.0</gravitee-policy-quota.version>    -->
         <!--    <gravitee-policy-spikearrest.version>1.15.0</gravitee-policy-spikearrest.version>    -->
