--- a/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
+++ b/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
@@ -137,3 +137,5 @@ databaseChangeLog:
       - file: liquibase/changelogs/v3_19_0/schema.yml
   - include:
       - file: liquibase/changelogs/v3_19_0/schema_gko.yml
+  - include:
+      - file: liquibase/changelogs/v3_19_7/schema.yml
