--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1428,7 +1428,7 @@ jobs:
                   command: |
                       echo "Running API & E2E tests in << parameters.execution_mode >> mode with << parameters.database >> database"
                       cd gravitee-apim-e2e
-                      if [[ << parameters.execution_mode >> == jupiter ]]
+                      if [ "<< parameters.execution_mode >>" = "jupiter" ]
                       then
                         echo "Enabling jupiter mode on APIM Gateway and Rest API"
                         export JUPITER_MODE_ENABLED=true
