--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1140,7 +1140,7 @@ jobs:
                   steps:
                       - slack/notify:
                             channel: C02NGT20S4W
-                            event: always
+                            event: pass
                             custom: |
                                 {
                                   "blocks": [
@@ -1409,7 +1409,7 @@ jobs:
                                 echo "export RELEASE_NOTES_PR_URL=$(cat /tmp/releaseNotesPrUrl.txt)" >> $BASH_ENV
                       - slack/notify:
                             channel: C02NGT20S4W
-                            event: always
+                            event: pass
                             custom: |
                                 {
                                   "blocks": [
