test(perf): add file tree support for test-runner It is now possible to organize test cases in sub folders
Also, this brings:
- refactoring of the test-runner.ts to split methods and improve readability
- add a '-d' option to display debug logs when running the script
- change parameter from 'output-prometheus-remote' to 'xk6-prometheus-rw' and externalize it
- improve error logging for test-runner

--- a/gravitee-apim-perf/.env
+++ b/gravitee-apim-perf/.env
@@ -6,6 +6,7 @@ SKIP_TLS_VERIFY=false
 
 # metrics export
 K6_PROMETHEUS_REMOTE_URL=http://localhost:9090/api/v1/write
+K6_OUTPUT_MODE=xk6-prometheus-rw
 
 # usernames and passwords
 ADMIN_USERNAME=admin
