--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -157,7 +157,7 @@
     "lint": "npm run lint:eslint && npm run prettier",
     "lint:eslint": "eslint --ext .json,.ts ./src",
     "lint:eslint:fix": "eslint --ext .json,.ts ./src --fix",
-    "lint:fix": "npm run lint:eslint:fix && npm run prettier:fix && npm run lint:license:fix",
+    "lint:fix": "npm run lint:eslint:fix && npm run lint:license:fix && npm run prettier:fix",
     "lint:license": "license-check-and-add check -f license-check-config.json",
     "lint:license:fix": "license-check-and-add add -f license-check-config.json -r",
     "postinstall": "ngcc",
