chore: allow building UI docker images in one command
With the previous Dockerfile, we needed to copy the `docker/config`
folder manually to have it next to the `dist` directory.
By updating the path in the Dockerfile, we can run directly the docker
build command once we packaged the ui.

(cherry picked from commit 9fafe22caf9a9122b4ac4600c165542f86652c53)
(cherry picked from commit e5db1700a06056fe78ff0a02e77d1969aefca61e)

--- a/gravitee-apim-console-webui/docker/Dockerfile
+++ b/gravitee-apim-console-webui/docker/Dockerfile
@@ -17,7 +17,7 @@
 FROM graviteeio/nginx:1.23
 LABEL maintainer="contact@graviteesource.com"
 
-ADD config /etc/confd
+COPY ./docker/config /etc/confd
 
 COPY ./dist /usr/share/nginx/html/
 
