--- a/gravitee-apim-perf/package.json
+++ b/gravitee-apim-perf/package.json
@@ -4,38 +4,30 @@
   "description": "Gravitee.io APIM - performance",
   "private": true,
   "devDependencies": {
-    "@types/k6": "~0.37.0",
-    "@types/node": "16.10.9",
-    "@types/webpack": "5.28.0",
-    "dotenv": "^16.0.1",
-    "fs-extra": "^10.1.0",
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/k6": "~0.42.0",
+    "@types/node": "^18.11.18",
+    "@types/webpack": "^5.28.0",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "glob": "^8.1.0",
     "license-check-and-add": "4.0.3",
     "prettier": "2.5.1",
-    "ts-command-line-args": "^2.3.1",
-    "ts-node": "^10.2.1",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.5.2",
-    "webpack": "5.73.0",
-    "webpack-cli": "4.10.0",
-    "webpack-glob-entries": "^1.0.1",
-    "zx": "^4.2.0"
-  },
-  "dependencies": {
-    "@faker-js/faker": "6.2.0",
-    "@gravitee/fixtures": "file:../gravitee-apim-e2e/lib/fixtures",
-    "@gravitee/management-webclient-sdk": "file:../gravitee-apim-e2e/lib/management-webclient-sdk",
-    "@gravitee/utils": "file:../gravitee-apim-e2e/lib/utils",
-    "gravitee-apim-e2e": "file:../gravitee-apim-e2e",
-    "node-fetch": "2.6.7",
-    "process": "^0.11.10"
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "webpack",
     "lint": "npm run prettier && npm run lint:license",
     "lint:fix": "npm run prettier:fix && npm run lint:license:fix && tsc --noEmit",
     "lint:license": "license-check-and-add check -f license-check-config.json",
     "lint:license:fix": "license-check-and-add add -f license-check-config.json -r",
-    "preinstall": "sh ./scripts/preinstall.sh",
     "prettier": "prettier --check \"**/*.{js,ts,html,css,scss,json}\"",
     "prettier:fix": "prettier --write \"**/*.{js,ts,html,css,scss,json}\"",
     "prettier:list": "prettier --list-different \"**/*.{js,ts,html,css,scss,json}\""
