refactor(portal): parameterize mapstruct + lombok

--- a/gravitee-apim-rest-api/gravitee-apim-rest-api-portal/gravitee-apim-rest-api-portal-rest/pom.xml
+++ b/gravitee-apim-rest-api/gravitee-apim-rest-api-portal/gravitee-apim-rest-api-portal-rest/pom.xml
@@ -36,6 +36,8 @@
 	<properties>
 		<openapi-generator.version>4.3.1</openapi-generator.version>
         <openapi.modelPackage>io.gravitee.rest.api.portal.rest.model</openapi.modelPackage>
+		<mapstruct.version>1.5.3.FINAL</mapstruct.version>
+		<lombok.version>1.18.24</lombok.version>
 	</properties>
 
 	<build>
@@ -111,12 +113,12 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.24</version>
+							<version>${lombok.version}</version>
 						</path>
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
-							<version>1.5.3.Final</version>
+							<version>${mapstruct.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -251,11 +253,11 @@
 			<artifactId>json-path</artifactId>
 		</dependency>
 
-
+<!--		Mapstruct + Lombok -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
-			<version>1.5.3.Final</version>
+			<version>${mapstruct.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -265,7 +267,7 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
-			<version>1.5.3.Final</version>
+			<version>${mapstruct.version}</version>
 		</dependency>
 
 	</dependencies>
